k8s/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  minReadySeconds: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: elasticsearch
    
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1.2Gi"
              cpu: "100m"
            requests:
              memory: "1Gi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 60
            periodSeconds: 20
          ports:
            - containerPort: 9200
              name: "p9200"
            - containerPort: 9300
              name: "p9300"
              
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - protocol: TCP
    port: 9200
    targetPort: 9200
    name: "p9200"
  - protocol: TCP
    port: 9300
    targetPort: 9300
    name: "p9300"
